<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/show_video_codecs"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_video_codecs"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/show_audio_codecs"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_audio_codecs"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/show_hardware_codecs"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_hardware_codecs"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/show_software_codecs"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_software_codecs"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/show_aliases"
        android:checkable="true"
        android:checked="false"
        android:title="@string/show_aliases"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/enable_all_visible"
        android:title="@string/enable_all_visible"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/disable_all_visible"
        android:title="@string/disable_all_visible"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/reset_configuration"
        android:title="@string/reset_configuration"
        app:showAsAction="never"
        />
</menu>
